--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -56,6 +56,7 @@
   "Избранное": "Favorites",
   "локации": "locations",
   "Страна": "Locations",
+  "Страны": "Countries",
   "Регион": "Locations",
   "Материк": "Locations",
   "Сначала дешевые": "Cheapest first",
@@ -75,6 +76,8 @@
   "Объявлений": "Advertisement",
   "Объявления": "Advertisements",
   "Все типы": "All types",
+  "Тип объекта": "Types",
+  "Тип недвижимости": "Types",
   "Квартиры": "Flats",
   "Апартаменты": "Apartments",
   "Квартиры под аренду": "Apartments for rent",
@@ -84,6 +87,7 @@
   "Замки": "Castles",
   "Шале": "Chalets",
   "Таунхаусы": "Townhouses",
+  "Спальни, Ванные": "Bedrooms,bathrooms",
   "Спальни": "Bedrooms",
   "спальни": "Bedrooms",
   "Гостиные": "Living rooms",
@@ -113,6 +117,7 @@
   "Общая" : "Total",
   "Участок" : "Plot",
   "Все" : "All",
+  "Площадь (кв.м)" : "Square (sq.m)",
   "От застройщика" : "From developer",
   "Найти" : "Search",
   "Валюта" : "Currency",
