--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -7,7 +7,9 @@
   "объявлений": "reklamlar",
   "Недвижимость" : "Emlak",
   "кв.м" : "metrekare",
+  "Площадь (кв.м)" : "Alan metrekare",
   "Ванна" : "Banyo",
+  "Спальни, Ванные" : "Yatak odaları, Banyolar",
   "Узнать больше": "Daha fazla öğrenmek için",
   "Пользовательское соглашение при использовании сайта" : "Siteyi kullanırken kullanıcı sözleşmesi",
   "О проекте": "proje hakkında",
