fix: map on mobile

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -136,5 +136,6 @@
   "Отправить заявку" : "Send request",
   "спал" : "room",
   "ван" : "Bat",
-  "кв.м" : "sq.m"
+  "кв.м" : "sq.m",
+  "Объявлений не найдено" : "Ads not found"
 }
