--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -117,5 +117,6 @@
   "Прессе" : "Basın için",
   "Партнерам" : "İş Ortakları için",
   "О компании" : "Şirket Hakkında",
-  "ВНЖ и Гражданство" : "Oturma izni ve Vatandaşlık"
+  "ВНЖ и Гражданство" : "Oturma izni ve Vatandaşlık",
+  "Объявлений не найдено" : "reklam bulunamadı"
 }
