fix: Translation in en for search_bar

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -4,7 +4,9 @@
   "Всего" : "Total",
   "объявлений" : "ads",
   "от" : "from",
-  "до" : "before",
+  "до" : "to",
+  "От" : "From",
+  "До" : "To",
   "Дом" : "House",
   "В избранное" : "To favorites",
   "Спален": "Bedrooms",
