--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -111,6 +111,7 @@
   "Сначала новые" : "Önce yeni",
   "Сначала дорогие" : "Önce pahalı",
   "Сначала дешевые" : "Önce ucuz",
+  "Сначала дешёвые" : "Önce ucuz",
   "Политика обработки персональных данных" : "Kişisel Verilerin İşlenmesi Politikası",
   "Пользовательское соглашение при использовании данных" : "Veri Kullanımı Kullanıcı Sözleşmesi",
   "Работа у нас" : "Bizde Çalışmak",
