feat: Add some words for translation

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -139,5 +139,7 @@
   "спал" : "room",
   "ван" : "Bat",
   "кв.м" : "sq.m",
-  "Объявлений не найдено" : "Ads not found"
+  "Объявлений не найдено" : "Ads not found",
+    "Жилая" : "Residential",
+    "Коммерческая" : "Commercial",
 }
