--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -119,5 +119,7 @@
   "Партнерам" : "İş Ortakları için",
   "О компании" : "Şirket Hakkında",
   "ВНЖ и Гражданство" : "Oturma izni ve Vatandaşlık",
-  "Объявлений не найдено" : "reklam bulunamadı"
+  "Объявлений не найдено" : "reklam bulunamadı",
+    "Жилая" : "Yerleşim",
+    "Коммерческая" : "Ticari"
 }
