--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -141,5 +141,5 @@
   "кв.м" : "sq.m",
   "Объявлений не найдено" : "Ads not found",
     "Жилая" : "Residential",
-    "Коммерческая" : "Commercial",
+    "Коммерческая" : "Commercial"
 }
