fix: Middleware & select for view and to_sea fields for admin product

--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -31,115 +31,118 @@
     "Турция" : "Türkei",
     "Вся" : "Alle",
     "Ванна" : "Bad",
-    "Пресса" : "Drücken Sie",
+    "Пресса" : "Presse",
     "О проекте" : "über das Projekt",
-    "Работа у нас" : "Arbeite mit uns",
     "в" : "im",
     "Недвижимость" : "Immobilie",
     "Площади (кв.м)" : "Fläche (qm)",
     "Неважно" : "Nicht wichtig",
+    "Пользовательское соглашение при использовании сайта" : "Nutzungsvereinbarung bei Nutzung der Website",
+    "Страны" : "Länder",
+    "Тип объекта" : "Objekttyp",
+    "Тип недвижимости" : "Art der Immobilie",
+    "Площадь (кв.м)" : "Fläche (qm)",
+    "спал" : "schlafzimmer",
+    "ван" : "bad",
+    "кв.м" : "qm",
+    "Объявлений не найдено" : "Keine Werbung gefunden",
+    "Жилая" : "Wohnen",
+    "Коммерческая" : "Gewerbeimmobilien",
+
     "Купить" : "Kaufen",
-    "Снять" : "Abheben",
+    "Снять" : "Mieten",
     "Инвестиции" : "Investitionen",
-    "ВНЖ и Гражданство" : "Aufenthaltserlaubnis und Staatsbürgerschaft",
-    "Рассрочка" : "Aufbauplan",
+    "ВНЖ и Гражданство" : "Aufenthaltserlaubnis",
+    "Рассрочка" : "Ratenzahlung",
     "О компании" : "Über das Unternehmen",
-    "Контакты" : "Kontakte",
+    "Контакты" : "Kontakt",
     "История" : "Geschichte",
     "Миссия" : "Mission",
     "Команда" : "Team",
-    "Отзывы" : "Rezensionen",
+    "Отзывы" : "Bewertungen",
     "Партнерам" : "Für Partner",
-    "Прессе" : "Drücken Sie",
-    "Пользовательское соглашение при использовании данных" : "Nutzungsvereinbarung bei der Nutzung von Daten",
-    "Пользовательское соглашение при использовании сайта" : "Nutzungsvereinbarung bei Nutzung der Website",
-    "Политика обработки персональных данных" : "Richtlinie zur Verarbeitung personenbezogener Daten",
+    "Прессе" : "Für die Presse",
+    "Работа у нас" : "Arbeiten bei uns",
+    "Пользовательское соглашение при использовании данных" : "Nutzungsvereinbarung bei Datenverwendung",
+    "Политика обработки персональных данных" : "Datenschutzrichtlinie",
     "Избранное" : "Favoriten",
-    "локации" : "Standorte",
-    "Страна" : "Ein Land",
-    "Страны" : "Länder",
+    "локации" : "standorte",
+    "Локации" : "Standorte",
+    "Страна" : "Land",
     "Регион" : "Region",
-    "Материк" : "Festland",
-    "Сначала дешевые" : "Zuerst die Billigen",
-    "Сначала дешёвые" : "Zuerst die Billigen",
-    "Сначала дорогие" : "Ihr Lieben zuerst",
-    "Сначала новые" : "Neue zuerst",
+    "Материк" : "Kontinent",
+    "Сначала дешевые" : "Zuerst die günstigen",
+    "Сначала дешёвые" : "Zuerst die günstigen",
+    "Сначала дорогие" : "Zuerst die teuren",
+    "Сначала новые" : "Zuerst die neuen",
     "Удалить все" : "Alles löschen",
-    "Запросить актуальные проекты" : "Fordern Sie aktuelle Projekte an",
-    "Объекты для получения гражданства :name за инвестиции" : "Objekte zur Erlangung der Staatsbürgerschaft: Name durch Investition",
-    "Свяжитесь с нами" : "Kontaktiere uns",
-    "Если у вас есть вопросы, оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время" : "Wenn Sie Fragen haben, hinterlassen Sie bitte Ihre Kontaktdaten und wir werden uns so schnell wie möglich mit Ihnen in Verbindung setzen",
-    "Связаться" : "Kontakt",
-    "Ознакомлен с политикой конфиденциальности" : "Ich habe die Datenschutzerklärung gelesen",
-    "Согласен на обработку персональных данных" : "Ich stimme der Verarbeitung personenbezogener Daten zu",
+    "Запросить актуальные проекты" : "Aktuelle Projekte anfordern",
+    "Объекты для получения гражданства :name за инвестиции" : "Objekte für die Erlangung der :name Staatsbürgerschaft durch Investitionen",
+    "Свяжитесь с нами" : "Kontaktieren Sie uns",
+    "Если у вас есть вопросы, оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время" : "Wenn Sie Fragen haben, hinterlassen Sie Ihre Kontaktdaten und wir werden uns in Kürze mit Ihnen in Verbindung setzen",
+    "Связаться" : "Kontaktieren",
+    "Ознакомлен с политикой конфиденциальности" : "Mit der Datenschutzrichtlinie vertraut",
+    "Согласен на обработку персональных данных" : "Stimme der Verarbeitung personenbezogener Daten zu",
     "Локация" : "Standort",
-    "Локаций" : "Standorte",
-    "Объявление" : "Bekanntmachung",
-    "Объявлений" : "Anzeige",
+    "Локаций" : "Standorten",
+    "Объявление" : "Anzeige",
+    "Объявлений" : "Anzeigen",
     "Объявления" : "Anzeigen",
-    "Все типы" : "Alle Arten",
-    "Тип объекта" : "Objekttyp",
-    "Тип недвижимости" : "Art der Immobilie",
+    "Все типы" : "Alle Typen",
     "Квартиры" : "Wohnungen",
-    "Апартаменты" : "Wohnungen",
-    "Квартиры под аренду" : "Wohnungen zu vermieten",
-    "Новостройки" : "Neue Gebäude",
+    "Апартаменты" : "Apartments",
+    "Квартиры, апартаменты" : "Wohnungen, Apartments",
+    "Квартиры под аренду" : "Wohnungen zur Miete",
+    "Новостройки" : "Neubauten",
     "Пентхаусы" : "Penthäuser",
-    "Дома, вилы, коттеджи" : "Häuser, Villen, Ferienhäuser",
+    "Дома, вилы, коттеджи" : "Häuser, Villen, Cottages",
     "Замки" : "Schlösser",
-    "Шале" : "Chalet",
-    "Таунхаусы" : "Stadthäuser",
+    "Шале" : "Chalets",
+    "Таунхаусы" : "Reihenhäuser",
     "Спальни, Ванные" : "Schlafzimmer, Badezimmer",
     "Спальни" : "Schlafzimmer",
     "спальни" : "Schlafzimmer",
     "Гостиные" : "Wohnzimmer",
     "Ванные" : "Badezimmer",
     "Цена" : "Preis",
-    "Еще" : "Noch",
-    "Особенности" : "Besonderheiten",
+    "Еще" : "Mehr",
+    "Особенности" : "Merkmale",
     "ТВ" : "Fernseher",
-    "Трасса" : "Route",
+    "Трасса" : "Rennstrecke",
     "Бассейн" : "Schwimmbad",
     "Балкон" : "Balkon",
     "Интернет" : "Internet",
     "Пляж" : "Strand",
     "Мебель" : "Möbel",
-    "Парковка" : "Parken",
+    "Парковка" : "Parkplatz",
     "Сад" : "Garten",
-    "Вид" : "Sicht",
+    "Вид" : "Aussicht",
     "Горы" : "Berge",
     "Озеро" : "See",
     "Лес" : "Wald",
     "До моря" : "Zum Meer",
     "Первая линия" : "Erste Linie",
-    "До 500 м" : "Bis zu 500 m",
-    "До 1 км" : "Bis zu 1 km",
-    "До 2 км" : "Bis zu 2 km",
-    "Площади кв.м." : "Fläche qm",
-    "Общая" : "Allgemein",
-    "Участок" : "Handlung",
+    "До 500 м" : "Bis 500 m",
+    "До 1 км" : "Bis 1 km",
+    "До 2 км" : "Bis 2 km",
+    "Площади кв.м." : "Flächen in qm",
+    "Общая" : "Gesamt",
+    "Участок" : "Grundstück",
     "Все " : "Alle",
-    "Площадь (кв.м)" : "Fläche (qm)",
-    "От застройщика" : "Vom Entwickler",
+    "От застройщика" : "Vom Bauträger",
     "Найти" : "Finden",
     "Валюта" : "Währung",
-    "Купить в рассрочку" : "Kaufen Sie in Raten",
+    "Купить в рассрочку" : "Ratenkauf",
     "ВНЖ в подарок" : "Aufenthaltserlaubnis als Geschenk",
     "Оплата криптовалютой" : "Zahlung mit Kryptowährung",
-    "Без комиссии" : "Keine Kommission",
-    "Паркинг в подарок" : "Parken als Geschenk",
+    "Без комиссии" : "Ohne Provision",
+    "Паркинг в подарок" : "Kostenloser Parkplatz",
     "Анастасия" : "Anastasia",
-    "Консультант по продажам" : "Verkaufsberater",
-    "Заказать просмотр" : "Auftragsbesichtigung",
+    "Консультант по продажам" : "Verkaufsberaterin",
+    "Заказать просмотр" : "Besichtigung buchen",
     "Расположение и инфраструктура" : "Lage und Infrastruktur",
     "Планировки квартир" : "Wohnungsgrundrisse",
     "Общая площадь" : "Gesamtfläche",
     "Описание" : "Beschreibung",
-    "Отправить заявку" : "Eine Anfrage senden",
-    "спал" : "schlafzimmer",
-    "ван" : "bad",
-    "кв.м" : "qm",
-    "Объявлений не найдено" : "Keine Werbung gefunden",
-    "Жилая" : "Wohnen",
-    "Коммерческая" : "Gewerbeimmobilien"
+    "Отправить заявку" : "Anfrage senden"
 }
