feat: Filter when located in country display regions

--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -48,6 +48,7 @@
     "Объявлений не найдено" : "Keine Werbung gefunden",
     "Жилая" : "Wohnen",
     "Коммерческая" : "Gewerbeimmobilien",
+    "Регионы" : "Regionen",
 
     "Купить" : "Kaufen",
     "Снять" : "Mieten",
