--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -121,5 +121,6 @@
   "ВНЖ и Гражданство" : "Oturma izni ve Vatandaşlık",
   "Объявлений не найдено" : "reklam bulunamadı",
     "Жилая" : "Yerleşim",
-    "Коммерческая" : "Ticari"
+    "Коммерческая" : "Ticari",
+    "Регионы" : "Bölgeler"
 }
