feat: Add translate from ru to tr

--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -38,6 +38,8 @@
   "Избранное" : "Favoriler",
   "Локации" : "Lokasyonlar",
   "Страна" : "Ülke",
+  "Страны" : "Ülkeler",
+  "Тип объекта" : "Emlak Tipi",
   "Регион" : "Bölge",
   "Материк" : "Kıta",
   "Локация" : "Lokasyon",
