feat: Change countries, params, urls

--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -30,6 +30,7 @@
     "Популярные локации" : "Beliebte Orte",
     "Турция" : "Türkei",
     "Вся" : "Alle",
+    "Весь" : "Alle",
     "Ванна" : "Bad",
     "Пресса" : "Presse",
     "О проекте" : "über das Projekt",
