--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -30,6 +30,7 @@
   "Популярные локации": "Popular locations",
   "Турция" : "Türkiye",
   "Вся": "All",
+  "Весь": "All",
   "Ванна" : "Bath",
   "Пресса" : "Press",
   "О проекте" : "About the project",
