--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -102,6 +102,8 @@
   "апартаменты" : "apartmanlar",
   "Квартиры" : "Daireler",
   "Все типы" : "Tüm türler",
+  "Вся" : "Tüm",
+  "Весь" : "Tüm",
   "Согласен на обработку персональных данных" : "Kişisel verilerin işlenmesini kabul ediyorum",
   "Ознакомлен с политикой конфиденциальности" : "Gizlilik politikasını okudum",
   "Связаться" : "İletişime geç",
