feat: Title for realty page

--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -36,6 +36,7 @@
     "О проекте" : "über das Projekt",
     "в" : "im",
     "Недвижимость" : "Immobilie",
+    "Покупка недвижимости": "Kauf einer Immobilie",
     "Площади (кв.м)" : "Fläche (qm)",
     "Неважно" : "Nicht wichtig",
     "Пользовательское соглашение при использовании сайта" : "Nutzungsvereinbarung bei Nutzung der Website",
