--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -37,6 +37,7 @@
   "Работа у нас" : "Work with us",
   "в": "in",
   "Недвижимость": "Real estate",
+  "Покупка недвижимости": "Buy real estate",
   "Площади (кв.м)" : "Area (sq.m)",
   "Неважно": "Doesn't matter",
   "Купить": "Purchase",
