--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -6,6 +6,7 @@
   "Дом" : "Ev",
   "объявлений": "reklamlar",
   "Недвижимость" : "Emlak",
+  "Покупка недвижимости" : "Bir mülk satın almak",
   "кв.м" : "metrekare",
   "Площадь (кв.м)" : "Alan metrekare",
   "Ванна" : "Banyo",
