feat: All ajaxes all dev url replaced

--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -13,7 +13,7 @@
   "Спальни, Ванные" : "Yatak odaları, Banyolar",
   "Узнать больше": "Daha fazla öğrenmek için",
   "Пользовательское соглашение при использовании сайта" : "Siteyi kullanırken kullanıcı sözleşmesi",
-  "О проекте": "proje hakkında",
+  "О проекте": "Proje hakkında",
   "Пресса" : "Basmak",
   "персональных данных" :"kişisel veri",
   "Согласен на обработку" : "işlemeyi kabul ediyorum",
