--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,4 +1,9 @@
 {
+  "Вторичка": "Secondary",
+  "Номер телефона": "Phone number",
+  "Иванов Алексей Петрович": "Ivanov Alexey Petrovich",
+  "ФИО": "Your name",
+  "Заявка на бронь": "Reservation request",
   "объектов": "objects",
   "Всего" : "Total",
   "объявлений" : "ads",
