--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -1,4 +1,9 @@
 {
+  "Вторичка": "İkincil konut",
+  "Номер телефона": "Telefon numarası",
+  "Иванов Алексей Петрович": "İvanov Aleksey Petroviç",
+  "ФИО": "Adınız",
+  "Заявка на бронь": "Rezervasyon isteği",
   "Дома. виллы, коттеджи": "Evde. villalar, evler",
   "до" : "önce",
   "от" : "itibaren",
