--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -21,9 +21,9 @@
   "О проекте": "Proje hakkında",
   "Пресса" : "Basmak",
   "персональных данных" :"kişisel veri",
-  "Согласен на обработку" : "işlemeyi kabul ediyorum",
+  "Согласен на обработку" : "Işlemeyi kabul ediyorum",
   "политикой конфеденциальности": "gizlilik politikası",
-  "Ознакомлен с" : "aşina",
+  "Ознакомлен с" : "Aşina",
   "в": "v",
   "Ваш телефон": "telefon numaran",
   "оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время" : "iletişim bilgilerinizi bırakın, en kısa sürede sizinle iletişime geçeceğiz",
